--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "axios": "^0.15.3",
+    "axios": "^0.19.0",
+    "babel-helper-vue-jsx-merge-props": "^2.0.3",
+    "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-plugin-transform-vue-jsx": "^3.7.0",
     "china-map-geojson": "^1.0.4",
     "echarts": "^3.3.2",
     "element-china-checkbox": "^1.4.0",
@@ -20,6 +23,7 @@
     "slider-verification-code": "^1.0.1",
     "vue": "^2.2.2",
     "vue-router": "^2.3.0",
+    "vue-tree-list": "^1.3.2",
     "vuex": "^2.0.0-rc.6"
   },
   "devDependencies": {
@@ -29,7 +33,7 @@
     "babel-loader": "^6.2.10",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-polyfill": "^6.16.0",
-    "babel-preset-env": "^1.2.1",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.0.0",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
