--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "nprogress": "^0.2.0",
     "qs": "^6.9.1",
     "slider-verification-code": "^1.0.1",
+    "sortablejs": "^1.10.1",
     "vue": "^2.2.2",
     "vue-router": "^2.3.0",
-    "vue-tree-list": "^1.3.2",
     "vuex": "^2.0.0-rc.6"
   },
   "devDependencies": {
