--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "sortablejs": "^1.10.1",
     "vue": "^2.2.2",
     "vue-router": "^2.3.0",
+    "vuedraggable": "^2.23.2",
     "vuex": "^2.0.0-rc.6"
   },
   "devDependencies": {
